--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/src/main/resources/
+
 
 
 
@@ -35,4 +35,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Ignorar a pasta resources
+resources/
 
